# cpp-miltech

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: .clang-tidy  devcontainer.json
homework_02/: CMakeLists.txt  inp_orig.txt  simulation1.txt  tgts.txt
homework_02/data/: input.txt  simulation.txt  targets.txt
homework_02/include/: drone.hpp  point_math.hpp  simulation.hpp
homework_02/src/: ballistics.cpp  drone.cpp  main.cpp  point_math.cpp  simulation.cpp
homework_03/: CMakeLists.txt  README.md
homework_03/data/: ammo.json  config.json  simulation.json
homework_03/include/: ammo.hpp  anglemath.hpp  ballistics.hpp  drone.hpp  point_math.hpp  simulation.hpp
homework_03/src/: ammo.cpp  anglemath.cpp  ballistics.cpp  drone.cpp  main.cpp  point_math.cpp  simulation.cpp
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt
homework_05/src/: main.cpp  telemetry.cpp
homework_06/: CMakeLists.txt
homework_06/data/: unknown_ammo.txt
homework_06/include/: ballistics.hpp
homework_06/src/: ballistics.cpp  main.cpp
homework_06/tests/: ballistics_tests.cpp
homework_07/: CMakeLists.txt  README.md
homework_07/include/: DroneControl.hpp  ManualSimulationClock.hpp  Mission.hpp  MissionProcessor.h  MissionProcessor.hpp  TargetControl.hpp  ballistics.hpp  defines.hpp  drone.hpp  simulation.hpp
homework_07/include/config/: ComponentFactory.h  ComponentFactory.hpp  FileConfigLoader.h  FileConfigLoader.hpp  ManualSimulationClock.hpp  defines.hpp
homework_07/include/dto/: Ammo.hpp  BallisticsInput.hpp  DropSolution.hpp  Mission.hpp  MissionConfig.hpp  SimStatistics.hpp  SimStep.hpp  Target.h  Target.hpp  TargetState.hpp
homework_07/include/interfaces/: IBallisticSolver.h  IBallisticSolver.hpp  IConfigLoader.h  IConfigLoader.hpp  ISimulationClock.hpp  ITargetProvider.h  ITargetProvider.hpp
homework_07/include/math/: angle_math.hpp
homework_07/include/providers/: JsonTargetProvider.h  JsonTargetProvider.hpp
homework_07/include/solvers/: AnalyticalSolver.h  AnalyticalSolver.hpp
homework_07/src/: DroneControl.cpp  ManualSimulationClock.cpp  Mission.cpp  MissionProcessor.cpp  TargetControl.cpp  ammo.cpp  ballistics.cpp  drone.cpp  main.cpp  simulation.cpp
homework_07/src/config/: ComponentFactory.cpp  FileConfigLoader.cpp  ManualSimulationClock.cpp
homework_07/src/math/: angle_math.cpp  point_math.cpp
homework_07/src/providers/: JsonTargetProvider.cpp
homework_07/src/solvers/: AnalyticalSolver.cpp
homework_08/: CMakeLists.txt  README.md
homework_08/data/: targets.json
homework_08/include/: MissionProcessor.hpp
homework_08/include/config/: ComponentFactory.hpp  FileConfigLoader.hpp  ManualSimulationClock.hpp  defines.hpp
homework_08/include/core/: Mission.hpp  MissionProcessor.hpp  TargetControl.hpp
homework_08/include/dto/: Ammo.hpp
homework_08/include/interfaces/: IBallisticSolver.hpp  IConfigLoader.hpp  ITargetProvider.hpp
homework_08/include/math/: angle_math.hpp  point_math.hpp
homework_08/include/providers/: JsonTargetProvider.hpp
homework_08/src/: MissionProcessor.cpp  TargetControl.cpp  main.cpp
homework_08/src/config/: ComponentFactory.cpp  FileConfigLoader.cpp  ManualSimulationClock.cpp
homework_08/src/core/: DroneControl.cpp  Mission.cpp  MissionProcessor.cpp  TargetControl.cpp
homework_08/src/math/: angle_math.cpp  point_math.cpp
homework_08/src/providers/: JsonTargetProvider.cpp
homework_09/: CMakeLists.txt  README.md
homework_09/data/: ammo.json
homework_09/include/config/: ComponentFactory.hpp  ManualSimulationClock.hpp  defines.hpp
homework_09/include/core/: DroneControl.hpp  Mission.hpp  MissionProcessor.hpp  TargetControl.hpp
homework_09/include/drone/: Accelerating.hpp  Decelerating.hpp  DroneContext.hpp  Moving.hpp  Stopped.hpp  Turning.hpp
homework_09/include/dto/: BallisticResult.hpp  SimStatistics.hpp  Target.hpp
homework_09/include/interfaces/: IBallisticSolver.hpp  IDroneState.hpp  IMissionState.hpp  ISimulationClock.hpp
homework_09/include/math/: point_math.hpp
homework_09/include/mission/: Attack.hpp  Idle.hpp  MissionCtx.hpp
homework_09/include/providers/: JsonTargetProvider.hpp
homework_09/include/solvers/: AnalyticalSolver.hpp  BallisticTable.hpp  TableSolver.hpp
homework_09/src/: main.cpp
homework_09/src/config/: ComponentFactory.cpp  FileConfigLoader.cpp  ManualSimulationClock.cpp
homework_09/src/core/: DroneControl.cpp  Mission.cpp  MissionProcessor.cpp  TargetControl.cpp
homework_09/src/drone/: Accelerating.cpp  Decelerating.cpp  DroneContext.cpp  Moving.cpp  Stopped.cpp  Turning.cpp
homework_09/src/math/: point_math.cpp
homework_09/src/mission/: Attack.cpp  Idle.cpp  MissionCtx.cpp
homework_09/src/providers/: JsonTargetProvider.cpp
homework_09/src/solvers/: AnalyticalSolver.cpp  BallisticTable.cpp  TableSolver.cpp
preps/: README.md  linux.md  macos.md  macos.sh  windows.md
